--- a/themes/zephyr/front-end/src/html/growth-guide.html
+++ b/themes/zephyr/front-end/src/html/growth-guide.html
@@ -9,7 +9,7 @@
   <link href="./main.css" rel="stylesheet">
 </head>
 <body data-barba="wrapper">
-  <header>
+  <header class="header-growth-guide">
     <div class="container">
       <div class="header-content">
         <!--      burger menu and cross-->
