--- a/themes/zephyr/front-end/src/html/team.html
+++ b/themes/zephyr/front-end/src/html/team.html
@@ -13,32 +13,34 @@
     <div class="container">
       <div class="header-content">
         <!--      burger menu and cross-->
-        <div class="burger-and-cross">
+        <div class="menu-and-cross">
           <div class="menu">
             <svg width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <line x1="28" y1="0.75" x2="-6.79088e-08" y2="0.749997" stroke="#252525" stroke-width="1.5"/>
-              <line x1="28" y1="9.75" x2="-6.7828e-08" y2="9.75" stroke="#252525" stroke-width="1.5"/>
-              <line x1="28" y1="18.75" x2="-6.7828e-08" y2="18.75" stroke="#252525" stroke-width="1.5"/>
+              <line x1="28" y1="0.75" x2="-6.79088e-08" y2="0.749997" stroke="#fefefd" stroke-width="1.5"/>
+              <line x1="28" y1="9.75" x2="-6.7828e-08" y2="9.75" stroke="#fefefd" stroke-width="1.5"/>
+              <line x1="28" y1="18.75" x2="-6.7828e-08" y2="18.75" stroke="#fefefd" stroke-width="1.5"/>
             </svg>
           </div>
           <div class="cross">
-            <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <line x1="1.46967" y1="19.1474" x2="19.1473" y2="1.46974" stroke="#252525" stroke-width="1.5"/>
-              <line x1="2.53033" y1="1.46967" x2="20.208" y2="19.1473" stroke="#252525" stroke-width="1.5"/>
+            <svg  width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <line x1="1.46967" y1="19.1474" x2="19.1473" y2="1.46974" stroke="#fefefd" stroke-width="1.5"/>
+              <line x1="2.53033" y1="1.46967" x2="20.208" y2="19.1473" stroke="#fefefd" stroke-width="1.5"/>
             </svg>
-          
           </div>
         </div>
         <!--      logo-->
-        <a class="logo" href="#">
+        <a class="logo light" href="#">
           <img src="./images/logo.png" alt="logo">
+        </a>
+        <a class="logo dark" href="#">
+          <img src="./images/gray-logo.png" alt="logo">
         </a>
         <!--    links-->
         <div class="links">
-          <a class="small-link" href="#">Sector Expertise</a>
-          <a class="small-link" href="#">About</a>
-          <a class="small-link" href="#">Growth Guide</a>
-          <a class="small-link" href="#">Say hello</a>
+          <a class="small-link" href="#"><span data-hover="Sector Expertise">Sector Expertise</span></a>
+          <a class="small-link" href="#"><span data-hover="About">About</span></a>
+          <a class="small-link" href="#"><span data-hover="Growth Guide">Growth Guide</span></a>
+          <a class="small-link" href="#"><span data-hover="Say hello">Say hello</span></a>
         </div>
       </div>
     </div>
@@ -55,11 +57,9 @@
           </div>
           <div class="container">
             <div class="content">
-              <h6 class="headline-6 word-up">health & wellness</h6>
-              <h1 class="headline-1 real-line-up">Lorem Ipsum dolor sit amut.</h1>
-              <p class="paragraph real-line-up">With deep industry knowledge and expertise in the emerging health and wellness space,
-                our team will be able to help whether you’re looking to define your proposition or create a brand that stands out from your competitors or need help connecting your product with new audiences
-                via digital marketing, we have industry expertise to help you throughout your journey. </p>
+              <h6 class="headline-6 word-up center">OUR TEAM</h6>
+              <h1 class="headline-1 word-up center">Built by Founders, for Founders</h1>
+              <p class="paragraph real-line-up center">Our core team in London handles strategy and design and all have previous experience as startup founders. With a collective breath of creative, technical and strategic experience, we are supported by worldwide talent ensuring our client’s digital growth. This means we are flexible to adapt to your business’ needs, adding trusted world-class specialists whenever needed without having to charge you for the staff you don’t.</p>
             </div>
           </div>
           <div class="down">
@@ -82,129 +82,126 @@
             <div class="our-team">
               <div class="our-team-title center">
                 <h6 class="headline-6 normal word-up">OUR TEAM</h6>
-                <h2 class="headline-2 real-line-up">Strategically led, global impact</h2>
+                <h2 class="headline-2 word-up">Strategically led, global impact</h2>
               </div>
               <div class="our-team-content">
                 <div class="row">
-                  <div class="col-6 col-md-3">
+                  <div class="col-6 col-md-4 col-xl-3 team-parent">
                     <div class="team-person">
                       <div class="image-wrapper milky-circle">
-                        <img alt="team person" src="./images/team-person1.png">
+                        <img class="iv-st-from-bottom" alt="team person" src="./images/team-person1.png">
                       </div>
-                      <h5 class="name">Xan</h5>
-                      <h6 class="title-job">Founder and strategist</h6>
+                      <h5 class="name word-up">Xan</h5>
+                      <h6 class="title-job word-up">Founder and strategist</h6>
                     </div>
                   </div>
-                  <div class="col-6 col-md-3">
+                  <div class="col-6 col-md-4 col-xl-3 team-parent">
                     <div class="team-person">
                       <div class="image-wrapper oval">
-                        <img alt="team person" src="./images/team-person2.png">
+                        <img class="iv-st-from-bottom" alt="team person" src="./images/team-person2.png">
                       </div>
-                      <h5 class="name">Nick</h5>
-                      <h6 class="title-job">Founder and strategist</h6>
+                      <h5 class="name word-up">Nick</h5>
+                      <h6 class="title-job word-up">Founder and strategist</h6>
                     </div>
                   </div>
-                  <div class="col-6 col-md-3">
+                  <div class="col-6 col-md-4 col-xl-3 team-parent">
                     <div class="team-person">
                       <div class="image-wrapper red-circle">
-                        <img alt="team person" src="./images/team-person3.png">
+                        <img class="iv-st-from-bottom" alt="team person" src="./images/team-person3.png">
                       </div>
-                      <h5 class="name">Joel</h5>
-                      <h6 class="title-job">Art Director</h6>
+                      <h5 class="name word-up">Joel</h5>
+                      <h6 class="title-job word-up">Art Director</h6>
                     </div>
                   </div>
-                  <div class="col-6 col-md-3">
+                  <div class="col-6 col-md-4 col-xl-3 team-parent">
                     <div class="team-person">
                       <div class="image-wrapper green-circle">
-                        <img alt="team person" src="./images/team-person4.png">
+                        <img class="iv-st-from-bottom" alt="team person" src="./images/team-person4.png">
                       </div>
-                      <h5 class="name">Jorge</h5>
-                      <h6 class="title-job">Designer</h6>
+                      <h5 class="name word-up">Jorge</h5>
+                      <h6 class="title-job word-up">Designer</h6>
                     </div>
                   </div>
-                  <div class="col-6 col-md-3">
+                  <div class="col-6 col-md-4 col-xl-3 team-parent">
                     <div class="team-person">
                       <div class="image-wrapper milky-circle">
-                        <img alt="team person" src="./images/team-person1.png">
+                        <img class="iv-st-from-bottom" alt="team person" src="./images/team-person1.png">
                       </div>
-                      <h5 class="name">Dylan</h5>
-                      <h6 class="title-job">Google Adwords Specialist</h6>
+                      <h5 class="name word-up">Dylan</h5>
+                      <h6 class="title-job word-up">Google Adwords Specialist</h6>
                     </div>
                   </div>
-                  <div class="col-6 col-md-3">
+                  <div class="col-6 col-md-4 col-xl-3 team-parent">
                     <div class="team-person">
                       <div class="image-wrapper oval">
-                        <img alt="team person" src="./images/team-person2.png">
+                        <img class="iv-st-from-bottom" alt="team person" src="./images/team-person2.png">
                       </div>
-                      <h5 class="name">Red</h5>
-                      <h6 class="title-job">Paid Social Specialist</h6>
+                      <h5 class="name word-up">Red</h5>
+                      <h6 class="title-job word-up">Paid Social Specialist</h6>
                     </div>
                   </div>
-                  <div class="col-6 col-md-3">
+                  <div class="col-6 col-md-4 col-xl-3 team-parent">
                     <div class="team-person">
                       <div class="image-wrapper big-green-circle">
-                        <img alt="team person" src="./images/team-person5.png">
+                        <img class="iv-st-from-bottom" alt="team person" src="./images/team-person5.png">
                       </div>
-                      <h5 class="name">Laura</h5>
-                      <h6 class="title-job">Frontend Developer</h6>
+                      <h5 class="name word-up">Laura</h5>
+                      <h6 class="title-job word-up">Frontend Developer</h6>
                     </div>
                   </div>
-                  <div class="col-6 col-md-3">
+                  <div class="col-6 col-md-4 col-xl-3 team-parent">
                     <div class="team-person">
                       <div class="image-wrapper green-circle">
-                        <img alt="team person" src="./images/team-person4.png">
+                        <img class="iv-st-from-bottom" alt="team person" src="./images/team-person4.png">
                       </div>
-                      <h5 class="name">Sudir</h5>
-                      <h6 class="title-job">Wordpress Developer</h6>
+                      <h5 class="name word-up">Sudir</h5>
+                      <h6 class="title-job word-up">Wordpress Developer</h6>
                     </div>
                   </div>
-                  <div class="col-6 col-md-3">
+                  <div class="col-6 col-md-4 col-xl-3 team-parent">
                     <div class="team-person">
                       <div class="image-wrapper milky-circle">
-                        <img alt="team person" src="./images/team-person1.png">
+                        <img class="iv-st-from-bottom" alt="team person" src="./images/team-person1.png">
                       </div>
-                      <h5 class="name">Dino</h5>
-                      <h6 class="title-job">Youtube Growth Hacker</h6>
+                      <h5 class="name word-up">Dino</h5>
+                      <h6 class="title-job word-up">Youtube Growth Hacker</h6>
                     </div>
                   </div>
-                  <div class="col-6 col-md-3">
+                  <div class="col-6 col-md-4 col-xl-3 team-parent">
                     <div class="team-person">
                       <div class="image-wrapper oval">
-                        <img alt="team person" src="./images/team-person2.png">
+                        <img class="iv-st-from-bottom" alt="team person" src="./images/team-person2.png">
                       </div>
-                      <h5 class="name">Dr Eugene</h5>
-                      <h6 class="title-job">SEO specialist</h6>
+                      <h5 class="name word-up">Dr Eugene</h5>
+                      <h6 class="title-job word-up">SEO specialist</h6>
                     </div>
                   </div>
-                  <div class="col-6 col-md-3">
+                  <div class="col-6 col-md-4 col-xl-3 team-parent">
                     <div class="team-person">
                       <div class="image-wrapper red-circle">
-                        <img alt="team person" src="./images/team-person3.png">
+                        <img class="iv-st-from-bottom" alt="team person" src="./images/team-person3.png">
                       </div>
-                      <h5 class="name">Angelo</h5>
-                      <h6 class="title-job">Virtual Assistant</h6>
+                      <h5 class="name word-up">Angelo</h5>
+                      <h6 class="title-job word-up">Virtual Assistant</h6>
                     </div>
                   </div>
-                  <div class="col-6 col-md-3">
+                  <div class="col-6 col-md-4 col-xl-3 team-parent">
                     <div class="team-person">
                       <div class="image-wrapper green-circle">
-                        <img alt="team person" src="./images/team-person4.png">
+                        <img class="iv-st-from-bottom" alt="team person" src="./images/team-person4.png">
                       </div>
-                      <h5 class="name">Ike</h5>
-                      <h6 class="title-job">Conversion Rate Optimisation</h6>
+                      <h5 class="name word-up">Ike</h5>
+                      <h6 class="title-job word-up">Conversion Rate Optimisation</h6>
                     </div>
                   </div>
-                  <div class="col-12">
-                    <a href="#" class="load-more btn">
-                      Load More
-                    </a>
-                  </div>
                 </div>
+                <a class="load-more btn iv-st-from-bottom" href="#">
+                  Load More
+                </a>
               </div>
             </div>
           </div>
         </section>
-
       </div>
       <!--    <script src="./main.js"></script>-->
       <script src="./main.js"></script>
@@ -214,7 +211,7 @@
       <div class="container">
         <div class="footer-content">
           <!--        logo and copy right-->
-          <div class="logo-and-copy">
+          <div class="logo-and-copy iv-st-from-bottom">
             <a href="#">
               <img src="./images/logo.png" alt="logo.png">
             </a>
@@ -224,16 +221,15 @@
           </div>
           <!--      links-->
           <div class="links">
-            <div class="title-and-link newsletter">
-              <h3 class="headline-7 show">JOIN OUR NEWSLETTER</h3>
-              <h3 class="headline-7 hide">NEWSLETTER</h3>
+            <div class="title-and-link iv-st-from-bottom  newsletter">
+              <h3 class="headline-7">JOIN OUR NEWSLETTER</h3>
               <input type="email" placeholder="Email">
-              <a class="btn" href="#">Submit</a>
+              <a class="btn has-bg" href="#">Submit</a>
             </div>
-            <div class="title-and-link social">
-              <h3 class="headline-7 show">FOLLOW</h3>
-              <h3 class="headline-7 hide">SOCIAL</h3>
-              <div class="icons show">
+            <div class="title-and-link iv-st-from-bottom  social">
+              <h3 class="headline-7 mobile">FOLLOW</h3>
+              <h3 class="headline-7 desktop">SOCIAL</h3>
+              <div class="icons mobile-only">
                 <a class="icon" href="#">
                   <svg class="tw" width="25" height="21" viewBox="0 0 25 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M22.4121 5.54688C23.3887 4.81445 24.2676 3.93555 24.9512 2.91016C24.0723 3.30078 23.0469 3.59375 22.0215 3.69141C23.0957 3.05664 23.877 2.08008 24.2676 0.859375C23.291 1.44531 22.168 1.88477 21.0449 2.12891C20.0684 1.10352 18.75 0.517578 17.2852 0.517578C14.4531 0.517578 12.1582 2.8125 12.1582 5.64453C12.1582 6.03516 12.207 6.42578 12.3047 6.81641C8.05664 6.57227 4.24805 4.52148 1.70898 1.44531C1.26953 2.17773 1.02539 3.05664 1.02539 4.0332C1.02539 5.79102 1.9043 7.35352 3.32031 8.28125C2.49023 8.23242 1.66016 8.03711 0.976562 7.64648V7.69531C0.976562 10.1855 2.73438 12.2363 5.07812 12.7246C4.6875 12.8223 4.19922 12.9199 3.75977 12.9199C3.41797 12.9199 3.125 12.8711 2.7832 12.8223C3.41797 14.873 5.32227 16.3379 7.56836 16.3867C5.81055 17.7539 3.61328 18.584 1.2207 18.584C0.78125 18.584 0.390625 18.5352 0 18.4863C2.24609 19.9512 4.93164 20.7812 7.86133 20.7812C17.2852 20.7812 22.4121 13.0176 22.4121 6.23047C22.4121 5.98633 22.4121 5.79102 22.4121 5.54688Z" fill="white"/>
@@ -250,31 +246,33 @@
                   </svg>
                 </a>
               </div>
-              <div class="link hide">
-                <a class="paragraph" href="#">Facebook</a>
-                <a class="paragraph" href="#">Linkedin</a>
-                <a class="paragraph" href="#">Twitter</a>
+              <div class="link desktop-only">
+                <a class="paragraph" href="#"><span data-hover="Facebook">Facebook</span></a>
+                <a class="paragraph" href="#"><span data-hover="Linkedin">Linkedin</span></a>
+                <a class="paragraph" href="#"><span data-hover="Twitter">Twitter</span></a>
               </div>
           
             </div>
-            <div class="title-and-link legal">
+            <div class="title-and-link iv-st-from-bottom  legal">
               <h3 class="headline-7">LEGAL</h3>
               <div class="link">
-                <a class="paragraph" href="#">T’s & Cs</a>
-                <a class="paragraph" href="#">Privacy Policy</a>
-                <a class="paragraph" href="#">Cookies</a>
-                <a class="paragraph" href="#">Accessibility Statement</a>
+                <a class="paragraph" href="#"><span data-hover="T’s & Cs">T’s & Cs</span></a>
+                <a class="paragraph" href="#"><span data-hover="Privacy Policy">Privacy Policy</span></a>
+                <a class="paragraph" href="#"><span data-hover="Cookies">Cookies</span></a>
+                <a class="paragraph" href="#"><span data-hover="Accessibility Statement">Accessibility Statement</span>
+                </a>
               </div>
             </div>
-            <div class="title-and-link navigation">
+            <div class="title-and-link iv-st-from-bottom  navigation">
               <h3 class="headline-7">NAVIGATION</h3>
               <div class="link">
-                <a class="paragraph" href="#">Health & Wellbeing</a>
-                <a class="paragraph" href="#">Future Transport</a>
-                <a class="paragraph" href="#">Experiential Economy</a>
-                <a class="paragraph" href="#">About Us</a>
-                <a class="paragraph" href="#">Growth Guide</a>
-                <a class="paragraph" href="#">Get in Touch</a>
+                <a class="paragraph" href="#"><span data-hover="Health & Wellbeing">Health & Wellbeing</span></a>
+                <a class="paragraph" href="#"><span data-hover="Future Transport">Future Transport</span></a>
+                <a class="paragraph" href="#"><span data-hover="Experiential Economy">Experiential Economy</span>
+                </a>
+                <a class="paragraph" href="#"><span data-hover="About Us">About Us</span></a>
+                <a class="paragraph" href="#"><span data-hover="Growth Guide">Growth Guide</span></a>
+                <a class="paragraph" href="#"><span data-hover="Get in Touch">Get in Touch</span></a>
               </div>
             </div>
           </div>
