--- a/themes/zephyr/front-end/src/html/say-hello.html
+++ b/themes/zephyr/front-end/src/html/say-hello.html
@@ -5,7 +5,7 @@
   <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
         name="viewport">
   <meta content="ie=edge" http-equiv="X-UA-Compatible">
-  <title>say hello</title>
+  <title>Say Hello</title>
   <link href="./main.css" rel="stylesheet">
 </head>
 <body data-barba="wrapper">
