--- a/themes/zephyr/front-end/src/html/home.html
+++ b/themes/zephyr/front-end/src/html/home.html
@@ -792,7 +792,7 @@
         </div>
       </section>
       <!--      contact-->
-      <section class="component-contact-us">
+      <section class="component-contact-us iv-st-from-bottom">
         <div class="container">
           <div class="contact-us-model">
             <div class="data">
