--- a/themes/zephyr/front-end/src/html/sector-expertise2.html
+++ b/themes/zephyr/front-end/src/html/sector-expertise2.html
@@ -16,25 +16,25 @@
         <!--      burger menu and cross-->
         <div class="menu-and-cross">
           <div class="menu">
-            <svg width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <line x1="28" y1="0.75" x2="-6.79088e-08" y2="0.749997" stroke="#fefefd" stroke-width="1.5"/>
-              <line x1="28" y1="9.75" x2="-6.7828e-08" y2="9.75" stroke="#fefefd" stroke-width="1.5"/>
-              <line x1="28" y1="18.75" x2="-6.7828e-08" y2="18.75" stroke="#fefefd" stroke-width="1.5"/>
+            <svg fill="none" height="20" viewBox="0 0 28 20" width="28" xmlns="http://www.w3.org/2000/svg">
+              <line stroke="#fefefd" stroke-width="1.5" x1="28" x2="-6.79088e-08" y1="0.75" y2="0.749997"/>
+              <line stroke="#fefefd" stroke-width="1.5" x1="28" x2="-6.7828e-08" y1="9.75" y2="9.75"/>
+              <line stroke="#fefefd" stroke-width="1.5" x1="28" x2="-6.7828e-08" y1="18.75" y2="18.75"/>
             </svg>
           </div>
           <div class="cross">
-            <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <line x1="1.46967" y1="19.1474" x2="19.1473" y2="1.46974" stroke="#fefefd" stroke-width="1.5"/>
-              <line x1="2.53033" y1="1.46967" x2="20.208" y2="19.1473" stroke="#fefefd" stroke-width="1.5"/>
+            <svg fill="none" height="20" viewBox="0 0 21 20" width="21" xmlns="http://www.w3.org/2000/svg">
+              <line stroke="#fefefd" stroke-width="1.5" x1="1.46967" x2="19.1473" y1="19.1474" y2="1.46974"/>
+              <line stroke="#fefefd" stroke-width="1.5" x1="2.53033" x2="20.208" y1="1.46967" y2="19.1473"/>
             </svg>
           </div>
         </div>
         <!--      logo-->
         <a class="logo light" href="#">
-          <img src="../html/images/logo.png" alt="logo">
+          <img alt="logo" src="../html/images/logo.png">
         </a>
         <a class="logo dark" href="#">
-          <img src="../html/images/gray-logo.png" alt="logo">
+          <img alt="logo" src="../html/images/gray-logo.png">
         </a>
         <!--    links-->
         <div class="links">
@@ -50,40 +50,42 @@
   <div class="smooth-scroller" smooth-scroll-container>
     <main data-barba="container" data-barba-namespace="home">
       <div class="wrapper-page-transition"></div>
-      <div class="sector-expertise2-page-wrapper"></div>
-      <!--         hero component-->
-      <section class="component-hero">
-        <div class="hero-image">
-          <img src="../html/images/sector-expertise-2-hero.png" alt="hero">
-        </div>
-        <div class="container">
-          <div class="content">
-            <h6 class="headline-6 word-up center">FULLY CHARGED</h6>
-            <h1 class="headline-1 word-up center">Kickstarting the UK’s electric bike revolution</h1>
-            <p class="paragraph">With deep industry knowledge and expertise in the emerging health and wellness space,
-              our team will be able to help whether you’re looking to define your proposition or create a brand that stands out from your competitors or need help connecting your product with new audiences via digital marketing, we have industry expertise to help you throughout your journey.
-            </p>
+      <div class="sector-expertise2-page-wrapper">
+        <!--         hero component-->
+        <section class="component-hero">
+          <div class="hero-image">
+            <img alt="hero" src="../html/images/sector-expertise-2-hero.png">
           </div>
-        </div>
-        <div class="down">
-          <svg width="24" height="56" viewBox="0 0 24 56" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <g clip-path="url(#clip0)">
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M2 12V30C2 35.5 6.5 40 12 40C17.5 40 22 35.5 22 30V12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12ZM0 12C0 5.4 5.4 0 12 0C18.6 0 24 5.4 24 12V30C24 36.6 18.6 42 12 42C5.4 42 0 36.6 0 30V12Z"
-                    fill="white"/>
-              <path class="dot" fill-rule="evenodd" clip-rule="evenodd" d="M11 7V11C11 11.6 11.4 12 12 12C12.6 12 13 11.6 13 11V7C13 6.4 12.6 6 12 6C11.4 6 11 6.4 11 7Z" fill="white"/>
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M12 53.0002L17.5 47.5002C17.9 47.1002 18.5 47.1002 18.9 47.5002C19.3 47.9002 19.3 48.5002 18.9 48.9002L12.7 55.1002C12.5 55.3002 12.2 55.4002 12 55.4002C11.8 55.4002 11.5 55.3002 11.3 55.1002L4.99995 48.9002C4.59995 48.5002 4.59995 47.9002 4.99995 47.5002C5.39995 47.1002 5.99995 47.1002 6.39995 47.5002L12 53.0002Z"
-                    fill="white"/>
-            </g>
-            <defs>
-              <clipPath id="clip0">
-                <rect width="24" height="55.4" fill="white"/>
-              </clipPath>
-            </defs>
-          </svg>
-        </div>
-      </section>
+          <div class="container">
+            <div class="content">
+              <h6 class="headline-6 word-up center">FULLY CHARGED</h6>
+              <h1 class="headline-1 word-up center">Kickstarting the UK’s electric bike revolution</h1>
+              <p class="paragraph">With deep industry knowledge and expertise in the emerging health and wellness space,
+                our team will be able to help whether you’re looking to define your proposition or create a brand that stands out from your competitors or need help connecting your product with new
+                audiences via digital marketing, we have industry expertise to help you throughout your journey.
+              </p>
+            </div>
+          </div>
+          <div class="down">
+            <svg fill="none" height="56" viewBox="0 0 24 56" width="24" xmlns="http://www.w3.org/2000/svg">
+              <g clip-path="url(#clip0)">
+                <path clip-rule="evenodd" d="M2 12V30C2 35.5 6.5 40 12 40C17.5 40 22 35.5 22 30V12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12ZM0 12C0 5.4 5.4 0 12 0C18.6 0 24 5.4 24 12V30C24 36.6 18.6 42 12 42C5.4 42 0 36.6 0 30V12Z"
+                      fill="white"
+                      fill-rule="evenodd"/>
+                <path class="dot" clip-rule="evenodd" d="M11 7V11C11 11.6 11.4 12 12 12C12.6 12 13 11.6 13 11V7C13 6.4 12.6 6 12 6C11.4 6 11 6.4 11 7Z" fill="white" fill-rule="evenodd"/>
+                <path clip-rule="evenodd" d="M12 53.0002L17.5 47.5002C17.9 47.1002 18.5 47.1002 18.9 47.5002C19.3 47.9002 19.3 48.5002 18.9 48.9002L12.7 55.1002C12.5 55.3002 12.2 55.4002 12 55.4002C11.8 55.4002 11.5 55.3002 11.3 55.1002L4.99995 48.9002C4.59995 48.5002 4.59995 47.9002 4.99995 47.5002C5.39995 47.1002 5.99995 47.1002 6.39995 47.5002L12 53.0002Z"
+                      fill="white"
+                      fill-rule="evenodd"/>
+              </g>
+              <defs>
+                <clipPath id="clip0">
+                  <rect fill="white" height="55.4" width="24"/>
+                </clipPath>
+              </defs>
+            </svg>
+          </div>
+        </section>
+      </div>
       <!--    <script src="./main.js"></script>-->
       <script src="./main.js"></script>
     </main>
@@ -94,7 +96,7 @@
           <!--        logo and copy right-->
           <div class="logo-and-copy iv-st-from-bottom">
             <a href="#">
-              <img src="../html/images/logo.png" alt="logo.png">
+              <img alt="logo.png" src="../html/images/logo.png">
             </a>
             <p class="paragraph">
               2020 © Zephyr.ai Registered in England & Wales VAT Number 06746184
@@ -104,7 +106,7 @@
           <div class="links">
             <div class="title-and-link iv-st-from-bottom  newsletter">
               <h3 class="headline-7">JOIN OUR NEWSLETTER</h3>
-              <input type="email" placeholder="Email">
+              <input placeholder="Email" type="email">
               <a class="btn has-bg" href="#">Submit</a>
             </div>
             <div class="title-and-link iv-st-from-bottom  social">
@@ -112,21 +114,21 @@
               <h3 class="headline-7 desktop">SOCIAL</h3>
               <div class="icons mobile-only">
                 <a class="icon" href="#">
-                  <svg class="tw" width="25" height="21" viewBox="0 0 25 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg class="tw" fill="none" height="21" viewBox="0 0 25 21" width="25" xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M22.4121 5.54688C23.3887 4.81445 24.2676 3.93555 24.9512 2.91016C24.0723 3.30078 23.0469 3.59375 22.0215 3.69141C23.0957 3.05664 23.877 2.08008 24.2676 0.859375C23.291 1.44531 22.168 1.88477 21.0449 2.12891C20.0684 1.10352 18.75 0.517578 17.2852 0.517578C14.4531 0.517578 12.1582 2.8125 12.1582 5.64453C12.1582 6.03516 12.207 6.42578 12.3047 6.81641C8.05664 6.57227 4.24805 4.52148 1.70898 1.44531C1.26953 2.17773 1.02539 3.05664 1.02539 4.0332C1.02539 5.79102 1.9043 7.35352 3.32031 8.28125C2.49023 8.23242 1.66016 8.03711 0.976562 7.64648V7.69531C0.976562 10.1855 2.73438 12.2363 5.07812 12.7246C4.6875 12.8223 4.19922 12.9199 3.75977 12.9199C3.41797 12.9199 3.125 12.8711 2.7832 12.8223C3.41797 14.873 5.32227 16.3379 7.56836 16.3867C5.81055 17.7539 3.61328 18.584 1.2207 18.584C0.78125 18.584 0.390625 18.5352 0 18.4863C2.24609 19.9512 4.93164 20.7812 7.86133 20.7812C17.2852 20.7812 22.4121 13.0176 22.4121 6.23047C22.4121 5.98633 22.4121 5.79102 22.4121 5.54688Z"
                       fill="white"/>
                   </svg>
                 </a>
                 <a class="icon" href="#">
-                  <svg class="fa" width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg class="fa" fill="none" height="25" viewBox="0 0 25 25" width="25" xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M24.6094 12.625C24.6094 5.93555 19.1895 0.515625 12.5 0.515625C5.81055 0.515625 0.390625 5.93555 0.390625 12.625C0.390625 18.6797 4.78516 23.709 10.5957 24.5879V16.1406H7.51953V12.625H10.5957V9.98828C10.5957 6.96094 12.4023 5.25195 15.1367 5.25195C16.5039 5.25195 17.8711 5.49609 17.8711 5.49609V8.47461H16.3574C14.8438 8.47461 14.3555 9.40234 14.3555 10.3789V12.625H17.7246L17.1875 16.1406H14.3555V24.5879C20.166 23.709 24.6094 18.6797 24.6094 12.625Z"
                       fill="white"/>
                   </svg>
                 </a>
                 <a class="icon" href="#">
-                  <svg class="in" width="22" height="23" viewBox="0 0 22 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg class="in" fill="none" height="23" viewBox="0 0 22 23" width="22" xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M20.3125 0.6875H1.51367C0.683594 0.6875 0 1.41992 0 2.29883V21C0 21.8789 0.683594 22.5625 1.51367 22.5625H20.3125C21.1426 22.5625 21.875 21.8789 21.875 21V2.29883C21.875 1.41992 21.1426 0.6875 20.3125 0.6875ZM6.5918 19.4375H3.36914V9.03711H6.5918V19.4375ZM4.98047 7.57227C3.90625 7.57227 3.07617 6.74219 3.07617 5.7168C3.07617 4.69141 3.90625 3.8125 4.98047 3.8125C6.00586 3.8125 6.83594 4.69141 6.83594 5.7168C6.83594 6.74219 6.00586 7.57227 4.98047 7.57227ZM18.75 19.4375H15.4785V14.3594C15.4785 13.1875 15.4785 11.625 13.8184 11.625C12.1094 11.625 11.8652 12.9434 11.8652 14.3105V19.4375H8.64258V9.03711H11.7188V10.4531H11.7676C12.207 9.62305 13.2812 8.74414 14.8438 8.74414C18.1152 8.74414 18.75 10.9414 18.75 13.7246V19.4375Z"
                       fill="white"/>
