say hello page revision done isa

--- a/themes/zephyr/front-end/src/html/say-hello.html
+++ b/themes/zephyr/front-end/src/html/say-hello.html
@@ -86,7 +86,7 @@
           <div class="container">
             <div class="contact-us-model">
               <div class="data">
-                <h3 class="title-contact word-up center mobile-only">Send us a message</h3>
+                <h3 class="title-contact iv-st-from-bottom center mobile-only">Send us a message</h3>
                 <form>
                   <input class="iv-st-from-bottom" type="text" placeholder="Name">
                   <input class="iv-st-from-bottom" type="email" placeholder="Email">
