--- a/themes/zephyr/front-end/src/html/sector-expertise.html
+++ b/themes/zephyr/front-end/src/html/sector-expertise.html
@@ -14,27 +14,19 @@
     <div class="container">
       <div class="header-content">
         <!--      burger menu and cross-->
-        <div class="menu-and-cross">
-          <div class="menu">
-            <svg fill="none" height="20" viewBox="0 0 28 20" width="28" xmlns="http://www.w3.org/2000/svg">
-              <line stroke="#fefefd" stroke-width="1.5" x1="28" x2="-6.79088e-08" y1="0.75" y2="0.749997"/>
-              <line stroke="#fefefd" stroke-width="1.5" x1="28" x2="-6.7828e-08" y1="9.75" y2="9.75"/>
-              <line stroke="#fefefd" stroke-width="1.5" x1="28" x2="-6.7828e-08" y1="18.75" y2="18.75"/>
-            </svg>
-          </div>
-          <div class="cross">
-            <svg fill="none" height="20" viewBox="0 0 21 20" width="21" xmlns="http://www.w3.org/2000/svg">
-              <line stroke="#fefefd" stroke-width="1.5" x1="1.46967" x2="19.1473" y1="19.1474" y2="1.46974"/>
-              <line stroke="#fefefd" stroke-width="1.5" x1="2.53033" x2="20.208" y1="1.46967" y2="19.1473"/>
-            </svg>
-          </div>
+        <div class="menu">
+          <button class="burger-menu" id="burger-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
         </div>
         <!--      logo-->
         <a class="logo light" href="#">
-          <img alt="logo" src="../html/images/logo.png">
+          <img src="../html/images/logo.png" alt="logo">
         </a>
         <a class="logo dark" href="#">
-          <img alt="logo" src="../html/images/gray-logo.png">
+          <img src="../html/images/gray-logo.png" alt="logo">
         </a>
         <!--    links-->
         <div class="links">
@@ -46,6 +38,7 @@
       </div>
     </div>
   </header>
+  
   
   <div class="smooth-scroller" smooth-scroll-container>
     <main data-barba="container" data-barba-namespace="home">
