component-grid-images two images done

--- a/themes/zephyr/front-end/src/html/home.html
+++ b/themes/zephyr/front-end/src/html/home.html
@@ -115,7 +115,8 @@
             <div class="gide-wrapper">
               <div class="card iv-st-from-bottom card-one">
                 <div class="image-wrapper image-wrapper-2">
-                  <img alt="image" src="../html/images/phone-2%20.png">
+                  <img src="./images/whiterectangle.png" alt="whiterectangle">
+                  <img style="top:-3.5rem" class="iphone" src="./images/iPhone.png" alt="iPhone">
                 </div>
                 <div class="content">
                   <h5 class="headline-5 word-up">Float</h5>
@@ -124,7 +125,7 @@
               </div>
               <div class="card iv-st-from-bottom card-two">
                 <div class="image-wrapper image-wrapper-4">
-                  <img alt="image" src="../html/images/meeting%20.png">
+                  <img  src="./images/meeting%20.png" alt="image">
                 </div>
                 <div class="content">
                   <h5 class="headline-5 word-up">Chartwell</h5>
@@ -133,7 +134,8 @@
               </div>
               <div class="card iv-st-from-bottom card-three">
                 <div class="image-wrapper image-wrapper-3">
-                  <img alt="image" src="../html/images/pangaea%20.png">
+                  <img src="./images/bkueerectangle_8.png" alt="bkueerectangle">
+                  <img class="logo" src="./images/pangaea.png" alt="pangaea">
                 </div>
                 <div class="content">
                   <h5 class="headline-5 word-up">Pangaea</h5>
@@ -142,7 +144,8 @@
               </div>
               <div class="card iv-st-from-bottom card-four">
                 <div class="image-wrapper image-wrapper-5">
-                  <img alt="image" src="../html/images/phone%20.png">
+                  <img src="./images/bg-black.png" alt="bg-black">
+                  <img style="top: -2.2rem;" class="iphone-frame" src="./images/iPhone9-fram.png" alt="iPhone9-fram">
                 </div>
                 <div class="content">
                   <h5 class="headline-5 word-up">Spencer Hart</h5>
