component-grid-images removed aspc from all images and adjusted some spaces

--- a/themes/zephyr/front-end/src/html/home.html
+++ b/themes/zephyr/front-end/src/html/home.html
@@ -114,7 +114,7 @@
           <div class="container">
             <div class="gide-wrapper">
               <div class="card iv-st-from-bottom card-one">
-                <div class="image-wrapper image-wrapper-2">
+                <div class="image-wrapper">
                   <img src="./images/whiterectangle.png" alt="whiterectangle">
                   <img style="top:-3.5rem" class="iphone" src="./images/iPhone.png" alt="iPhone">
                 </div>
@@ -124,7 +124,7 @@
                 </div>
               </div>
               <div class="card iv-st-from-bottom card-two">
-                <div class="image-wrapper image-wrapper-4">
+                <div class="image-wrapper">
                   <img  src="./images/meeting%20.png" alt="image">
                 </div>
                 <div class="content">
@@ -133,7 +133,7 @@
                 </div>
               </div>
               <div class="card iv-st-from-bottom card-three">
-                <div class="image-wrapper image-wrapper-3">
+                <div class="image-wrapper">
                   <img src="./images/bkueerectangle_8.png" alt="bkueerectangle">
                   <img class="logo" src="./images/pangaea.png" alt="pangaea">
                 </div>
@@ -143,7 +143,7 @@
                 </div>
               </div>
               <div class="card iv-st-from-bottom card-four">
-                <div class="image-wrapper image-wrapper-5">
+                <div class="image-wrapper">
                   <img src="./images/bg-black.png" alt="bg-black">
                   <img style="top: -2.2rem;" class="iphone-frame" src="./images/iPhone9-fram.png" alt="iPhone9-fram">
                 </div>
