--- a/themes/zephyr/front-end/src/html/sector-expertise2.html
+++ b/themes/zephyr/front-end/src/html/sector-expertise2.html
@@ -554,32 +554,32 @@
           </div>
         </section>
         <!-- component-success-stories-->
-        <section class="component-success-stories">
+        <section class="component-grid-images">
           <div class="container">
             <div class="paragraph-1 center word-up">case studies</div>
             <h1 class="headline-1 real-line-up">Other success stories</h1>
-            <div class="row">
-              <div class="col-12 col-sm-6 card">
+            <div class="grid row">
+              <div class="grid-item iv-st-from-bottom col-12 col-sm-6">
                 <div class="image-wrapper">
-                  <img src="./images/bg-black.png" alt="bg-black">
-                  <img style="top: -2.2rem;" class="iphone-frame" src="./images/iPhone9-fram.png" alt="iPhone9-fram">
+                  <img src="../html/images/bg-black.png" alt="bg-black">
+                  <img style="top: -2.2rem;" class="iphone-frame" src="../html/images/iPhone9-fram.png" alt="iPhone9-fram">
                 </div>
                 <div class="content">
-                  <h5 class="headline-5 word-up">Spencer hart</h5>
+                  <h5 class="headline-5 word-up">Spencer Hart</h5>
                   <h4 class="headline-4 real-line-up">Ultra premium men’s tailoring.</h4>
                 </div>
               </div>
-              <div class="col-12 col-sm-6 card">
+              <div class="grid-item iv-st-from-bottom col-12 col-sm-6">
                 <div class="image-wrapper">
-                  <img src="./images/bkueerectangle_8.png" alt="bkueerectangle">
-                  <img class="logo" src="./images/pangaea.png" alt="pangaea">
+                  <img src="../html/images/bkueerectangle_8.png" alt="bkueerectangle">
+                  <img class="logo" src="../html/images/pangaea.png" alt="pangaea">
                 </div>
                 <div class="content">
                   <h5 class="headline-5 word-up">Pangaea</h5>
-                  <h4 class="headline-4 real-line-up">Uncovering a new wave of medical research..</h4>
+                  <h4 class="headline-4 real-line-up">Uncover a new wave of medical research</h4>
                 </div>
-        
               </div>
+              <div class="grid-sizer grid-item col-12 col-sm-6 stamp"></div>
             </div>
           </div>
         </section>
